# task-rounting

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: graph.yaml  intent_shortcuts.yaml
data/: README.md
data/eval_samples/: README.md
data/eval_samples/k20_manual/: manifest.json  snapshots.jsonl
data/mock/: README.md
docs/: changelog.md  data_format.md  design.md  environment.md  eval_spec.md  issue_drafts.md  post_training_playbook.md  pyskill.md  skills.md  skills_runtime.md  track.md
notebooks/: sglang_model_eval.ipynb
scripts/: __init__.py  run_demo.py
scripts/cases/: run_cases.py
scripts/ops/: check_no_hardcoded_matching.py
scripts/post_training/: README.md  controller_post_training_run.ipynb
scripts/run/: __init__.py  run_case.py  run_cases.py  run_cli.py  run_cli_show.py  run_common.py
scripts/sglang/: README.md  sglang_model_eval.ipynb  start.sh  status.sh
src/: sitecustomize.py
src/task_router_graph/: graph.py  llm.py  nodes.py  protocol_constants.py  provider_config.py
src/task_router_graph/agents/: __init__.py  accutest_agent.py  agent_utils.py  common.py  controller_agent.py  executor_agent.py  failure_analysis_agent.py  failure_diagnosis_agent.py  functest_agent.py  memory.py  normal_agent.py  perftest_agent.py  reply_agent.py  skill_registry.py
src/task_router_graph/schema/: __init__.py  controller_action.py  environment.py  task_record.py  track_event.py
src/task_router_graph_train/: README.md  __init__.py  admissions.py  artifacts.py  feedback.py  runtime_adapter.py  types.py
src/task_router_graph_train/assets/: README.md
src/task_router_graph_train/cli/: annotate_queue.py  build_assets.py  build_sft_assets.py  evaluate.py  ingest_badcases.py  prepare_round.py  train_dpo.py  train_grpo.py  train_sft.py
src/task_router_graph_train/configs/: controller_grpo_online.yaml
src/task_router_graph_train/dataset/: __init__.py  builders.py
src/task_router_graph_train/docs/: controller_grpo_reward_spec.md  data_contract.md  eval_spec.md  grpo_dpo_loop_v1.md  manual_protocol_v1_draft.md  overview.md  post_training_v1.md  training_plan_v1.md
src/task_router_graph_train/eval/: __init__.py  (+3 more)
tests/: test_controller_agent.py  test_environment.ipynb  test_executor_delegate_skill.py  test_graph.ipynb  test_llm_provider_config.py  test_no_hardcoded_matching.py  test_nodes.ipynb  test_run_common.py  test_sglang_scripts.py  test_task_router_graph_train_dataset.py  test_task_router_graph_train_dpo.py  test_task_router_graph_train_evaluator.py  test_task_router_graph_train_feedback_loop.py  test_task_router_graph_train_grpo.py  test_task_router_graph_train_grpo_diagnostics.py  test_task_router_graph_train_holdout_inference.py  test_task_router_graph_train_sft.py  test_task_router_graph_train_structure.py  test_time_range_info_web_search.py  test_trimming.py  test_workflow_type_skills.py
(+44 files in other folders)
